--- a/app/components/ManageSubscriptionButton.module.css
+++ b/app/components/ManageSubscriptionButton.module.css
@@ -11,7 +11,6 @@
   padding: 11px 16px;
   cursor: pointer;
   transition: opacity 150ms;
-  margin-top: 1.5rem;
 }
 
 .manageBtn:hover:not(:disabled) {
